--- a/onepage.html
+++ b/onepage.html
@@ -1,1 +1,31 @@
 <!DOCTYPE html>
+
+<head>
+	
+
+</head>
+
+<body>
+
+<nav>
+	
+
+</nav>
+
+<header>
+	
+	
+</header>
+
+<main>
+	
+
+</main>
+
+
+<footer>
+	
+
+</footer>	
+
+</body>
