--- a/onepage.html
+++ b/onepage.html
@@ -1,30 +1,92 @@
 <!DOCTYPE html>
 
 <head>
+	<link href="onepage.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Major+Mono+Display" rel="stylesheet">
 	
-
 </head>
 
 <body>
-
-<nav>
 	
+<nav class="navbar">
+
+	<ul class="menu1">
+		<li class="liste">ACTUALITES</li>
+		<li class="liste">NOUS AIDER</li>
+		<li class="liste">NOUS AIDONS</li>
+		<li class="liste">CONTACT</li>
+
+	</ul>
+	<ul class="menu2">
+		<li class="liste">
+			<button class="boutton"> <a href="#"> Vous cherchez</a></a></button>
+		</li>
+		<li class="liste">
+			<button class="boutton"><a href="#">Faire un don</a></a></button>
+		</li>
+	</ul>
 
 </nav>
 
 <header>
-	
+	<div class="banner">
+	</div>
 	
 </header>
 
 <main>
+	<section class="grid">
+		<div>
+			<h2>METTEZ DU COEUR DANS VOTRE TESTAMENT</h2>
+			<p>Si vous n'avez pas d'héritier direct.</p>
+			<img class="img_corps" src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/croixR.png">
+		</div>
+			
+		<div>
+			<h2>DEVENEZ BIENFAITEUR DE LA CROIX-ROUGE EN TOUTE SÉRÉNITÉ</h2>
+			<p>Votre testament va sauver des vies. La Croix-Rouge pourra continuer l'approvisionnement de produits sanguins afin de garantir le traitement des malades du cancer et les victimes d'hémorragies, à former des citoyens aux premiers secours ainsi qu'à lancer des opérations de secours d'urgence à grande échelle.</p>
+			<img class="img_corps" src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/croixR.png">
+		</div>
+
+		<div>
+			<h2>Pour toute information en toute discrétion, téléphonez à Mme Mélanie Zylberberg au 02 371 39 39 ou envoyez-lui un e-mail : melanie.zylberberg@croix-rouge.be </h2>
+			<img class="img_corps" src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/croixR.png">
+		</div>
+	</section>	
+
+	<section class="corps">
+			<img class="img_corps" src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/aide.jpg">
+		<h2>DÉCOUVREZ LE LEGS EN DUO ET OPTIMISEZ VOTRE TESTAMENT</h2>
+		<p>Avec le legs en duo, vous léguez une partie de votre héritage à la Croix-Rouge. Elle devra payer les droits de succession non seulement sur sa partie de l’héritage, mais également les droits de succession sur la partie de votre héritier. Il reçoit alors plus d’argent en net, tout en laissant un avantage à la Croix-Rouge.</p>
+		<h3>Exemple : Vous léguez 500.000€ à un tiers (filleule, ami, voisine...).</h3>
+		<p>A. Si vous lui laissez le tout directement, sans legs en duo : votre héritier reçoit environ 120.000€ net après paiement des droits de succession</p>
+		<p>B. Si, par la formule du « legs en duo », vous partagez votre héritage entre votre héritier et la Croix-Rouge (50/50). Vous laissez alors à votre héritier 250.000€ et 250.000€ à la Croix-Rouge : la Croix-Rouge paie tous les droits de succession sur les deux montants, et il lui reste net environ 40.000€.</p>
 	
+	</section>
 
 </main>
 
 
 <footer>
-	
+	<section class="grid2">
+		<div>	
+			<p>Rue de Stalle 96
+					1180 BRUXELLES
+			</p>
+		</div>
+
+		<div>
+			<p>Tél. 02 371 31 11	Fax : 02 646 04 39
+				Email : info.crb@croix-rouge.be
+				Site Internet : www.croix-rouge.be</p>
+		</div>
+
+		<div>
+			<p>
+					Vice-Président national et Président communautaire : Edouard CROUFER
+			</p>
+		</div>
+	</section>
 
 </footer>	
 
