--- a/onepage.html
+++ b/onepage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
 	<link href="onepage.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Major+Mono+Display" rel="stylesheet">
@@ -39,29 +39,40 @@
 		<div>
 			<h2>METTEZ DU COEUR DANS VOTRE TESTAMENT</h2>
 			<p>Si vous n'avez pas d'héritier direct.</p>
-			<img class="img_corps" src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/croixR.png">
+			<img class="croix" src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/croixR.png">
 		</div>
 			
 		<div>
 			<h2>DEVENEZ BIENFAITEUR DE LA CROIX-ROUGE EN TOUTE SÉRÉNITÉ</h2>
-			<p>Votre testament va sauver des vies. La Croix-Rouge pourra continuer l'approvisionnement de produits sanguins afin de garantir le traitement des malades du cancer et les victimes d'hémorragies, à former des citoyens aux premiers secours ainsi qu'à lancer des opérations de secours d'urgence à grande échelle.</p>
-			<img class="img_corps" src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/croixR.png">
+			<p>Votre testament va <strong>sauver des vies</strong>. La Croix-Rouge pourra continuer l'approvisionnement de produits sanguins afin de garantir le traitement des malades du cancer et les victimes d'hémorragies, à former des citoyens aux premiers secours ainsi qu'à lancer des opérations de secours d'<strong>urgence</strong> à grande échelle.</p>
+			<img class="croix" src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/croixR.png">
 		</div>
 
 		<div>
 			<h2>Pour toute information en toute discrétion, téléphonez à Mme Mélanie Zylberberg au 02 371 39 39 ou envoyez-lui un e-mail : melanie.zylberberg@croix-rouge.be </h2>
-			<img class="img_corps" src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/croixR.png">
+			<img class="croix" src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/croixR.png">
 		</div>
 	</section>	
 
 	<section class="corps">
 			<img class="img_corps" src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/aide.jpg">
 		<h2>DÉCOUVREZ LE LEGS EN DUO ET OPTIMISEZ VOTRE TESTAMENT</h2>
-		<p>Avec le legs en duo, vous léguez une partie de votre héritage à la Croix-Rouge. Elle devra payer les droits de succession non seulement sur sa partie de l’héritage, mais également les droits de succession sur la partie de votre héritier. Il reçoit alors plus d’argent en net, tout en laissant un avantage à la Croix-Rouge.</p>
+		<p>Avec le <strong>legs </strong>	en duo, vous léguez une partie de votre héritage à la Croix-Rouge. Elle devra payer les droits de succession non seulement sur sa partie de l’héritage, mais également les droits de succession sur la partie de votre héritier. Il reçoit alors plus d’argent en net, tout en laissant un avantage à la Croix-Rouge.</p>
 		<h3>Exemple : Vous léguez 500.000€ à un tiers (filleule, ami, voisine...).</h3>
 		<p>A. Si vous lui laissez le tout directement, sans legs en duo : votre héritier reçoit environ 120.000€ net après paiement des droits de succession</p>
 		<p>B. Si, par la formule du « legs en duo », vous partagez votre héritage entre votre héritier et la Croix-Rouge (50/50). Vous laissez alors à votre héritier 250.000€ et 250.000€ à la Croix-Rouge : la Croix-Rouge paie tous les droits de succession sur les deux montants, et il lui reste net environ 40.000€.</p>
 	
+	</section>
+
+	<section class="assoc">
+		<h2>Voici d'autres associations qui méritent tout autant votre intérêt:</h2> 
+		<ul>
+			<li><a href="http://www.dons-legs.be/v2/association-organisme-action-damien-91714/" >Action Damien</a></li>
+			<li><a href="http://www.dons-legs.be/v2/association-organisme-medecins-du-monde-18757/" >Médecins du monde</a></li>
+			<li><a href="http://www.dons-legs.be/v2/association-organisme-solidarite-mondiale-91106/" >Solidarité mondiale</a></li>
+			<li><a href="http://www.dons-legs.be/v2/association-organisme-handicap-international-18749/" >Handicap international</a></li>
+		</ul>
+
 	</section>
 
 </main>
@@ -87,7 +98,8 @@
 			</p>
 		</div>
 	</section>
-
+	<a href="https://thatsthespir.it/"><em> "Our heads are round so our thoughts can change direction."</em></a>
 </footer>	
 
 </body>
+</html>
