--- a/onepage.html
+++ b/onepage.html
@@ -11,10 +11,10 @@
 <nav class="navbar">
 
 	<ul class="menu1">
-		<li class="liste">ACTUALITES</li>
-		<li class="liste">NOUS AIDER</li>
-		<li class="liste">NOUS AIDONS</li>
-		<li class="liste">CONTACT</li>
+		<li class="liste"><a href="#actualités">ACTUALITES</li></a>
+		<li class="liste"><a href="#aide">NOUS AIDER</li></a>
+		<li class="liste"><a href="#leg">LE LEG</li></a>
+		<li class="liste"><a href="#contact">CONTACT</li></a>
 
 	</ul>
 	<ul class="menu2">
@@ -29,13 +29,13 @@
 </nav>
 
 <header>
-	<div class="banner">
+	<div id="actualités" class="banner">
 	</div>
 	
 </header>
 
 <main>
-	<section class="grid">
+	<section id="aide" class="grid">
 		<div>
 			<h2>METTEZ DU COEUR DANS VOTRE TESTAMENT</h2>
 			<p>Si vous n'avez pas d'héritier direct.</p>
@@ -54,7 +54,7 @@
 		</div>
 	</section>	
 
-	<section class="corps">
+	<section id="leg" class="corps">
 			<img class="img_corps" src="/home/user/Bureau/learning-html-css/progressive-enhancement/Images/aide.jpg">
 		<h2>DÉCOUVREZ LE LEGS EN DUO ET OPTIMISEZ VOTRE TESTAMENT</h2>
 		<p>Avec le <strong>legs </strong>	en duo, vous léguez une partie de votre héritage à la Croix-Rouge. Elle devra payer les droits de succession non seulement sur sa partie de l’héritage, mais également les droits de succession sur la partie de votre héritier. Il reçoit alors plus d’argent en net, tout en laissant un avantage à la Croix-Rouge.</p>
@@ -79,7 +79,7 @@
 
 
 <footer>
-	<section class="grid2">
+	<section id="contact" class="grid2">
 		<div>	
 			<p>Rue de Stalle 96
 					1180 BRUXELLES
